--- a/.github/workflows/integration-metaplex.yml
+++ b/.github/workflows/integration-metaplex.yml
@@ -12,7 +12,7 @@ env:
   RUST_TOOLCHAIN: stable
 
 jobs:
-  changes:
+  metaplex-integration-changes:
     runs-on: ubuntu-latest
     # Set job outputs to values from filter step
     outputs:
@@ -33,8 +33,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       cache_id: program-metaplex 
-    needs: changes
-    if: ${{ needs.changes.outputs.core == 'true' || needs.changes.outputs.package == 'true' }}
+    needs: metaplex-integration-changes
+    if: ${{ needs.metaplex-integration-changes.outputs.core == 'true' || needs.metaplex-integration-changes.outputs.package == 'true' }}
     steps:
       # Setup Deps
       - uses: actions/checkout@v2
