--- a/.github/workflows/integration-token-vault.yml
+++ b/.github/workflows/integration-token-vault.yml
@@ -12,7 +12,7 @@ env:
   RUST_TOOLCHAIN: stable
 
 jobs:
-  changes:
+  token-vault-integration-changes:
     runs-on: ubuntu-latest
     # Set job outputs to values from filter step
     outputs:
@@ -36,8 +36,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       cache_id: program-token-vault 
-    needs: changes
-    if: ${{ needs.changes.outputs.core == 'true' || needs.changes.outputs.package == 'true' || needs.changes.outputs.workflow == 'true' }}
+    needs: token-vault-integration-changes
+    if: ${{ needs.token-vault-integration-changes.outputs.core == 'true' || needs.token-vault-integration-changes.outputs.package == 'true' || needs.token-vault-integration-changes.outputs.workflow == 'true' }}
     steps:
       # Setup Deps
       - uses: actions/checkout@v2
