--- a/.github/workflows/program-fixed-price-sale.yml
+++ b/.github/workflows/program-fixed-price-sale.yml
@@ -15,7 +15,7 @@ env:
   SOLANA_VERSION: 1.9.22
   RUST_TOOLCHAIN: stable
 jobs:
-  changes:
+  fixed-price-sale-program-changes:
     runs-on: ubuntu-latest
     # Set job outputs to values from filter step
     outputs:
@@ -36,8 +36,8 @@ jobs:
             workflow:
               - '.github/workflows/program-fixed-price-sale.yml'
   build-and-test-fixed-price-sale:
-    needs: changes
-    if: ${{ needs.changes.outputs.core == 'true' || needs.changes.outputs.package == 'true' || needs.changes.outputs.workflow == 'true' }}
+    needs: fixed-price-sale-program-changes
+    if: ${{ needs.fixed-price-sale-program-changes.outputs.core == 'true' || needs.fixed-price-sale-program-changes.outputs.package == 'true' || needs.fixed-price-sale-program-changes.outputs.workflow == 'true' }}
     runs-on: ubuntu-latest
     env:
       cache_id: program-fixed-price-sale
@@ -74,8 +74,8 @@ jobs:
           cargo +${{ env.RUST_TOOLCHAIN }} test-bpf -- --test-threads 1
 
   upgrade-version-and-publish-binary:
-    needs: changes
-    if: ${{ (needs.changes.outputs.core == 'true' || needs.changes.outputs.package == 'true') && github.event_name == 'push' }}
+    needs: fixed-price-sale-program-changes
+    if: ${{ (needs.fixed-price-sale-program-changes.outputs.core == 'true' || needs.fixed-price-sale-program-changes.outputs.package == 'true') && github.event_name == 'push' }}
     runs-on: ubuntu-latest
     env:
       cache_id: program-fixed-price-sale
