--- a/.github/workflows/program-gumdrop.yml
+++ b/.github/workflows/program-gumdrop.yml
@@ -16,7 +16,7 @@ env:
   RUST_TOOLCHAIN: stable
 
 jobs:
-  changes:
+  gumdrop-program-changes:
     runs-on: ubuntu-latest
     # Set job outputs to values from filter step
     outputs:
@@ -34,8 +34,8 @@ jobs:
           package:
             - 'gumdrop/**'
   build-and-test-gumdrop:
-    needs: changes
-    if: ${{ needs.changes.outputs.core == 'true' || needs.changes.outputs.package == 'true' }}
+    needs: gumdrop-program-changes
+    if: ${{ needs.gumdrop-program-changes.outputs.core == 'true' || needs.gumdrop-program-changes.outputs.package == 'true' }}
     runs-on: ubuntu-latest
     env:
       cache_id: program-gumdrop
@@ -75,8 +75,8 @@ jobs:
           cargo +${{ env.RUST_TOOLCHAIN }} test-bpf --bpf-out-dir ../../target/deploy/ -- --nocapture --test-threads 1
 
   upgrade-version-and-publish-binary:
-    needs: changes
-    if: ${{ (needs.changes.outputs.core == 'true' || needs.changes.outputs.package == 'true') && github.event_name == 'push' }}
+    needs: gumdrop-program-changes
+    if: ${{ (needs.gumdrop-program-changes.outputs.core == 'true' || needs.gumdrop-program-changes.outputs.package == 'true') && github.event_name == 'push' }}
     runs-on: ubuntu-latest
     env:
       cache_id: program-gumdrop
