--- a/.github/workflows/sdk-metaplex.yml
+++ b/.github/workflows/sdk-metaplex.yml
@@ -11,7 +11,7 @@ permissions:
   contents: write
 
 jobs:
-  changes:
+  metaplex-sdk-changes:
     runs-on: ubuntu-latest
     # Set job outputs to values from filter step
     outputs:
@@ -29,8 +29,8 @@ jobs:
           package:
             - 'metaplex/**'
   build-lint-and-test-metaplex:
-    needs: changes
-    if: ${{ needs.changes.outputs.core == 'true' || needs.changes.outputs.package == 'true' }}
+    needs: metaplex-sdk-changes
+    if: ${{ needs.metaplex-sdk-changes.outputs.core == 'true' || needs.metaplex-sdk-changes.outputs.package == 'true' }}
     runs-on: ubuntu-latest
 
     steps:
@@ -45,9 +45,9 @@ jobs:
           skip_test: true
 
   upgrade-version-and-publish-binary:
-    needs: changes
+    needs: metaplex-sdk-changes
     if:
-      ${{ (needs.changes.outputs.core == 'true' || needs.changes.outputs.package == 'true') && github.event_name == 'push' }}
+      ${{ (needs.metaplex-sdk-changes.outputs.core == 'true' || needs.metaplex-sdk-changes.outputs.package == 'true') && github.event_name == 'push' }}
     runs-on: ubuntu-latest
     env:
       cache_id: program-metaplex
