--- a/token-metadata/cli/Cargo.toml
+++ b/token-metadata/cli/Cargo.toml
@@ -19,3 +19,4 @@ solana-clap-utils = "1.9.5"
 solana-cli-config = "1.9.5"
 mpl-token-metadata = { path="../program", features = [ "no-entrypoint" ] }
 spl-token = { version="3.2.0", features = [ "no-entrypoint" ] }
+spl-associated-token-account = { version ="*", features = [ "no-entrypoint" ] }
