--- a/listing-rewards/program/Cargo.toml
+++ b/listing-rewards/program/Cargo.toml
@@ -25,6 +25,7 @@ solana-program = "~1.9.15"
 anchor-lang = "~0.24.2"
 anchor-spl = "~0.24.2"
 mpl-auction-house = { path = "./../../auction-house/program", features = ["cpi", "no-entrypoint"]}
+mpl-token-metadata = { version="~1.2.7", features = [ "no-entrypoint" ] }
 
 [dev-dependencies]
 anchor-client = "~0.24.2"
