--- a/listing-rewards/program/Cargo.toml
+++ b/listing-rewards/program/Cargo.toml
@@ -22,7 +22,7 @@ default = []
 
 [dependencies]
 solana-program = "~1.9.15"
-anchor-lang = "~0.24.2"
+anchor-lang = { version = "~0.24.2", features = ["init-if-needed"] }
 anchor-spl = "~0.24.2"
 mpl-auction-house = { path = "./../../auction-house/program", features = ["cpi", "no-entrypoint"]}
 mpl-token-metadata = { version="~1.2.7", features = [ "no-entrypoint" ] }
@@ -31,13 +31,12 @@ mpl-token-metadata = { version="~1.2.7", features = [ "no-entrypoint" ] }
 anchor-client = "~0.24.2"
 shellexpand = "~2.1.0"
 serde_json = "~1.0"
-solana-program = "~1.9.15"
 mpl-testing-utils= {path="../../core/rust/testing-utils", version="0.0.2"}
 mpl-auction-house-sdk = { path = "./../../auction-house/sdk" }
 mpl-listing-rewards-sdk = {path="./../sdk"}
 solana-program-test = "~1.9.15"
 solana-sdk = "~1.9.15"
 env_logger="~0.9.0"
-spl-associated-token-account = {version = "~1.0.3", features = ["no-entrypoint"]}
+spl-associated-token-account = { version = "~1.0.3", features = ["no-entrypoint"] }
 mpl-token-metadata = { version="~1.2.7", features = [ "no-entrypoint" ] }
 spl-token = { version = "~3.2",  features = ["no-entrypoint"] }
