--- a/listing-rewards/sdk/Cargo.toml
+++ b/listing-rewards/sdk/Cargo.toml
@@ -10,4 +10,5 @@ mpl-listing-rewards = { path = "./../program", features = ["no-entrypoint"]}
 mpl-auction-house = { path = "./../../auction-house/program", features = ["no-entrypoint"]}
 anchor-lang = "~0.24.2"
 anchor-client = "~0.24.2"
+spl-associated-token-account = { version = "~1.0.3", features = ["no-entrypoint"] }
 spl-token = { version = "~3.2",  features = ["no-entrypoint"] }
