--- a/.github/workflows/program-auction-house.yml
+++ b/.github/workflows/program-auction-house.yml
@@ -18,7 +18,10 @@ jobs:
     steps:
       - id: matrix
         run: |
-          echo '::set-output name=value::["1.10.31", "1.11.4"]'
+          sudo apt-get install -y jq \
+          MAINNET=$(curl https://api.mainnet-beta.solana.com -X POST -H "Content-Type: application/json" -d '{"jsonrpc":"2.0","id":1, "method":"getVersion"}' | jq '.result["solana-core"]') \
+          TESTNET=$(curl https://api.testnet.solana.com -X POST -H "Content-Type: application/json" -d '{"jsonrpc":"2.0","id":1, "method":"getVersion"}'' | jq '.result["solana-core"]') \
+          echo '::set-output name=value::[MAINNET, TESTNET]'
 
   changes:
     needs: setup
