--- a/core/js/package.json
+++ b/core/js/package.json
@@ -49,6 +49,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin": "^1.0.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.6.2"
   }
