--- a/nft-packs/js/package.json
+++ b/nft-packs/js/package.json
@@ -41,6 +41,7 @@
     "@metaplex-foundation/beet": "^0.6.0",
     "@metaplex-foundation/beet-solana": "^0.3.0",
     "@metaplex-foundation/cusper": "^0.0.2",
+    "@solana/spl-token": "^0.3.5",
     "@solana/web3.js": "^1.35.1"
   },
   "devDependencies": {
@@ -51,6 +52,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin": "^1.0.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.6.2"
   }
