--- a/trifle/program/Cargo.toml
+++ b/trifle/program/Cargo.toml
@@ -29,6 +29,7 @@ mpl-token-metadata = { path = "../../token-metadata/program", features = [
 ] }
 num-derive = "0.3.3"
 num-traits = "0.2.14"
+modular-bitfield = "0.11.2"
 
 [dev-dependencies]
 solana-sdk = "1.10.40"
