--- a/candy-machine-core/js/package.json
+++ b/candy-machine-core/js/package.json
@@ -24,7 +24,7 @@
     "fix": "yarn fix:lint && yarn fix:prettier"
   },
   "files": [
-    "./dist/src/**/*"
+    "/dist/src"
   ],
   "publishConfig": {
     "access": "public",
