--- a/.github/workflows/integration-candy-machine-core.yml
+++ b/.github/workflows/integration-candy-machine-core.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   changes:
-    runs-on: ubuntu-latest
+    runs-on: buildjet-4vcpu-ubuntu-2004
     # Set job outputs to values from filter step
     outputs:
       core: ${{ steps.filter.outputs.core }}
@@ -33,7 +33,7 @@ jobs:
           workflow:
             - '.github/workflows/integration-candy-machine-core.yml'
   build-and-integration-test-candy-machine-core:
-    runs-on: ubuntu-latest
+    runs-on: buildjet-4vcpu-ubuntu-2004
     env:
       cache_id: program-candy-machine-core 
     needs: changes
