--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "@metaplex-foundation/amman": "^0.12.0",
     "@project-serum/anchor": "^0.19.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint": "^8.3.0",
     "prettier": "^2.7.1"
   }
 }
