--- a/core/js/package.json
+++ b/core/js/package.json
@@ -48,6 +48,7 @@
     "@types/bn.js": "^5.1.1",
     "@types/bs58": "^4.0.1",
     "eslint": "^8.3.0",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.6.2"
   }
