--- a/fixed-price-sale/program/Cargo.toml
+++ b/fixed-price-sale/program/Cargo.toml
@@ -18,16 +18,16 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = {version="~0.24.2", features=["init-if-needed"]}
-anchor-spl = {version="~0.24.2"}
-spl-token = "~3.2.0"
-mpl-token-metadata = { features = [ "no-entrypoint" ], version="~1.2.10" }
+anchor-lang = {version="0.25", features=["init-if-needed"]}
+anchor-spl = {version="0.25"}
+spl-token = "3.2.0"
+mpl-token-metadata = { features = [ "no-entrypoint" ], version="1.4" }
 
 [dev-dependencies]
-anchor-client = "~0.24.2"
-solana-program-test = "~1.9.28"
-solana-program = "~1.9.28"
-solana-sdk = "~1.9.28"
-spl-associated-token-account = "~1.0.3"
+anchor-client = "0.25"
+solana-program-test = "1.10"
+solana-program = "1.10"
+solana-sdk = "1.10"
+spl-associated-token-account = "1.0.5"
 mpl-testing-utils= {path="../../core/rust/testing-utils" }
-mpl-metaplex = "0.0.3"
+mpl-metaplex = "0.1.0"
