--- a/candy-machine/program/Cargo.toml
+++ b/candy-machine/program/Cargo.toml
@@ -22,8 +22,8 @@ default = []
 [dependencies]
 anchor-lang = "0.25.0"
 arrayref = "0.3.6"
-spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
-mpl-token-metadata = { version = "~1.3.6", features = ["no-entrypoint"] }
+spl-token = { version = "~3.3.0", features = ["no-entrypoint"] }
+mpl-token-metadata = { version = "1.4.1", features = ["no-entrypoint"] }
 spl-associated-token-account = { version = "1.0.5", features = [
   "no-entrypoint",
 ] }
