--- a/.github/workflows/integration-hydra.yml
+++ b/.github/workflows/integration-hydra.yml
@@ -78,12 +78,12 @@ jobs:
       # Run integration test
       - name: start-local-test-validator
         working-directory: ./hydra/js
-        run: yarn run api:gen && yarn run build && DEBUG=amman* yarn amman:start && DEBUG=mpl* yarn test && yarn run amman:stop
+        run: DEBUG=amman* yarn amman:start
 
-      # - name: integration-test-hydra-program
-      #   id: run_integration_test
-      #   working-directory: ./hydra/js
-      #   run: DEBUG=mpl* yarn test
+      - name: integration-test-hydra-program
+        id: run_integration_test
+        working-directory: ./hydra/js
+        run: DEBUG=mpl* yarn test
 
       # - name: stop-local-test-validator
       #   working-directory: ./hydra/js
